# MicroSuono

./: CMakeLists.txt  Doxyfile  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  analyze_wav.py
.cache/clangd/index/: GraphManager.hpp.44896D6E4397F721.idx  Node.cpp.673E5A4FC2A37678.idx  Node.hpp.2695BFDA8EB7A43C.idx  Port.hpp.E9D1F3797FF9201A.idx  main.cpp.8FACA44E25DC59B8.idx  main.cpp.FE24B5ADCF6919DE.idx  miniaudio.hpp.E52390541633CD60.idx  miniaudio_impl.cpp.26DE7EFC6B6D65E9.idx  miniaudio_impl.cpp.3D53DE92F9F30E26.idx  miniaudio_impl.cpp.47089995FC90B13D.idx
docs/: ACCESS_MODIFIERS_CONSISTENCY.md  ARCHITECTURE.md  AUTOMATIC_SMOOTHING.md  AudioEngine.md  AudioInputNode.md  BEATING_VIBRATO.md  CLICK_FREE_AUDIO.md  DSL_DESIGN.md  DYNAMIC_CONNECTIONS.md  Events.md  GraphManager.md  IMPLEMENTATION_SUMMARY.md  LEXER_TUTORIAL.md  MonoToStereoNode.md  Multichannel.md  NODE_FADEIN.md  Node.md  Port.md  SMOOTHING_COMPARISON.md  VECTOR_ARRAYS.md
examples/: audio_input_demo.cpp  demo10_live_patching.cpp  demo11_slider_control.cpp  demo1_direct_stereo.cpp  demo2_mono_to_stereo.cpp  demo3_audio_input.cpp  demo4_tremolo.cpp  demo5_summation.cpp  demo6_fadeout.cpp  demo7_mixer_vectors.cpp  demo7_record_wav.cpp  demo8_beating.cpp  demo9_dynamic_connections.cpp  demo_param_types.cpp  multichannel_demo.cpp  test_lexer.cpp  test_node_refactoring.cpp
examples/MicroScript/: Delay.micros  Gain.micros  MatrixOps.micros  Mixer.micros  SineOscillator.micros  Tremolo.micros  VectorOps.micros
html/: _node_8hpp.html  _node_8hpp.js  _node_8hpp_source.html  _port_8hpp.html  _port_8hpp.js  _port_8hpp_source.html  annotated.html  classes.html  classms_1_1_node-members.html  classms_1_1_node.html  classms_1_1_node.js  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_3d69f64eaf81436fe2b22361382717e5.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  namespacems.html  namespacems.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  structms_1_1_event.html  structms_1_1_param-members.html  structms_1_1_param.html  structms_1_1_param.js  structms_1_1_port.html
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js
include/MicroSuono/: GraphManager.hpp  Node.hpp  Port.hpp
include/MicroSuono/MicroScript/: Lexer.hpp  Token.hpp
include/MicroSuono/audio/: AudioEngine.hpp
include/MicroSuono/nodes/: AudioInputNode.hpp  GainNode.hpp  MixerNode.hpp  MonoToStereoNode.hpp  SineNode.hpp  SineOscillatorNode.hpp  SliderNode.hpp  ThresholdNode.hpp
latex/: _node_8hpp.tex  _node_8hpp_source.tex  _port_8hpp.tex  _port_8hpp_source.tex  classms_1_1_node.tex  files.tex  namespacems.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structms_1_1_event.tex  structms_1_1_param.tex  structms_1_1_port.tex
output/: README.md
src/: main.cpp
src/MicroScript/: Lexer.cpp  Token.cpp
src/audio/: AudioEngine.cpp
src/core/: GraphManager.cpp  Node.cpp  Port.cpp
src/nodes/: AudioInputNode.cpp  GainNode.cpp  MixerNode.cpp  MonoToStereoNode.cpp  SineNode.cpp  SineOscillatorNode.cpp  SliderNode.cpp  ThresholdNode.cpp
